<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_action_brush"
            android:title="@string/picker" />
        <item
            android:id="@+id/problem"
            android:icon="@drawable/ic_action_brush"
            android:title="@string/creator" />
        <item
            android:id="@+id/random"
            android:icon="@drawable/ic_work"
            android:title="@string/random" />
        <item
            android:id="@+id/rules"
            android:icon="@drawable/ic_chrome_reader_mode"
            android:title="@string/rules" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title= "@string/help" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_action_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
